Practice/Ingress_loadbalancer/services.yaml
  apiVersion: v1
  kind: Service
  metadata: 
    name: netflix-service
    namespace: web-ns
  spec:
      ports:
      - port: 80
        targetPort: 80
      selector: 
         web: netflix
      type: LoadBalancer
